# polymarket-fifa-arbitrage

./: .env.example  .gitignore  LICENSE  LINCENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
clip_recipes/: __init__.py  config.py  sanity.py  schedules.py  train.py
clip_recipes/data/: augment.py  dedup.py  webdataset.py
clip_recipes/eval/: retrieval.py  zeroshot.py
clip_recipes/losses/: contrastive.py  sigclip.py
clip_recipes/models/: builder.py  lora.py
configs/: laion_400m_lora.yaml  quickstart.yaml  zh_clip_continue.yaml
scripts/: smoke-test.ts
src/: config.ts  index.ts  types.ts
src/api/: clob.ts  gamma.ts
src/arbitrage/: executor.ts  scanner.ts
src/cli/: app.ts  banner.ts  display.ts  settings-menu.ts
src/redis/: client.ts  store.ts
tests/: test_loss.py
tools/: build_shards.py
